--- a/styles/style.css
+++ b/styles/style.css
@@ -35,3 +35,44 @@
   font-weight: 900;
   font-style: normal;
 }
+
+/* Shared styles */
+
+header {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.display-flex {
+  display: flex;
+}
+
+/* individual styles */
+
+/* navbar related styles */
+
+nav {
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 50px;
+}
+
+.nav-logo {
+  font-size: 1.5rem;
+  color: #3a3a3a;
+}
+
+.nav-link li {
+  list-style: none;
+}
+.nav-link li a {
+  text-decoration: none;
+  color: #3a3a3a;
+  font-size: 1rem;
+}
+
+.nav-link ul {
+  align-items: center;
+  justify-content: center;
+  gap: 34px;
+}
