--- a/styles/style.css
+++ b/styles/style.css
@@ -235,6 +235,47 @@ nav {
   font-size: 1rem;
 }
 
+/* featured-products section related styles */
+.featured-products {
+  max-width: 1110px;
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
+  gap: 80px;
+  margin-bottom: 100px;
+}
+
+.featured-image {
+  border-radius: 7px;
+  width: 60%;
+}
+
+.featured-content h3 {
+  font-size: 2.4rem;
+  color: #0a0826;
+  margin-bottom: 16px;
+  letter-spacing: 0px;
+}
+
+.featured-content p {
+  font-size: 1rem;
+  color: #6c6c6c;
+  line-height: 28px;
+  letter-spacing: 0px;
+  margin-bottom: 16px;
+}
+
+.featured-content button {
+  padding: 10px 24px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  border-radius: 8px;
+  color: #ffffff;
+  background-color: #e02c6d;
+  border: none;
+}
+
 /* media query related styles  */
 
 /* small device */
